public class Programa {

    public static void main(String[] args) {

        Jogo jogo = new Jogo();

        jogo.jogar();
    }

}
