@startuml

title __JOGO's Class Diagram__\n

  namespace Jogo {
    class Jogo.Ambiente {
        - chaveMestra : int
        - dica : String
        - nome : String
        - saidas : HashMap<String, Ambiente[]>
        - temTesouro : boolean
        + Ambiente()
        + adicionarSaida()
        + ajustarSaidas()
        + getChaveMestra()
        + getDica()
        + getNome()
        + getSaida()
        + getTemTesouro()
        + getTodasSaidas()
        + getVizinho()
        + setChaveMestra()
        + setDica()
        + setTemTesouro()
    }
  }
  

  namespace Jogo {
    class Jogo.Analisador {
        - entrada : JTextField
        ~ Analisador()
        ~ pegarComando()
    }
  }
  

  namespace Jogo {
    class Jogo.BancoDeDados {
        {static} - arquivo : File
        {static} - nomeArquivo : String
        {static} + gravar()
        {static} + iniciar()
    }
  }
  

  namespace Jogo {
    class Jogo.Comando {
        - palavraDeComando : String
        - segundaPalavra : String
        ~ Comando()
        ~ ehDesconhecido()
        ~ getPalavraDeComando()
        ~ getSegundaPalavra()
        ~ temSegundaPalavra()
    }
  }
  

  namespace Jogo {
    class Jogo.ImagePanel {
        - image : BufferedImage
        + ImagePanel()
        # paintComponent()
    }
  }
  

  namespace Jogo {
    class Jogo.Jogo {
        - ambientes : Ambiente[]
        - dicasEncontradas : ArrayList<String>
        - direcaoEscolhida : String
        - nTentativas : int
        - nTentativasChaveMestra : int
        - temCargaExplosiva : boolean
        + getNTentativas()
        + getNTentativasChaveMestra()
        ~ Jogo()
        ~ jogar()
        ~ processarComando()
        - ImprimirLocalizacaoAtual()
        - criarAmbientes()
        - criarNTentativas()
        - criarTesouro()
        - debitaSaldoTentativas()
        - escolherOpcao()
        - explodir()
        - fimDeJogo()
        - gerarDicasParaAmbientes()
        - imprimirAjuda()
        - imprimirBoasVindas()
        - irParaAmbiente()
        - sair()
        - sortearChaveMestra()
        - verificaEhUltimaTentaiva()
    }
  }
  

  namespace Jogo {
    class Jogo.PalavrasComando {
        {static} ~ comandosValidos : List<String>
        {static} - instance : PalavrasComando
        {static} + getInstance()
        ~ PalavrasComando()
        ~ ehComando()
    }
  }
  

  namespace Jogo {
    class Jogo.Programa {
        {static} + main()
    }
  }
  

  namespace Jogo {
    class Jogo.TelaPrincipal {
        - console : JTextArea
        - input : JTextField
        - janela : JFrame
        - painelConsole : JScrollPane
        - painelDireita : JPanel
        - painelEsquerda : JPanel
        - painelSul : JPanel
        + addImagemGameOver()
        + addImagemTesouro()
        + atualizaDicas()
        + atualizaTentativas()
        + getInput()
        + travarInput()
        + warning()
        ~ TelaPrincipal()
        ~ adicionaTextoConsole()
        ~ adicionaTextoConsole()
        ~ exibir()
        ~ fechar()
        - atualizaDicas()
        - montarJanela()
        - rolarFinal()
    }
  }
  

  Jogo.Analisador o-- Jogo.PalavrasComando : palavrasDeComando
  Jogo.ImagePanel -up-|> javax.swing.JPanel
  Jogo.Jogo o-- Jogo.Ambiente : ambienteAtual
  Jogo.Jogo o-- Jogo.Analisador : analisador
  Jogo.Jogo o-- Jogo.TelaPrincipal : telaPrincipal
  Jogo.TelaPrincipal o-- Jogo.ImagePanel : imagem
  Jogo.TelaPrincipal o-- Jogo.Jogo : jogo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
